@@ -13,6 +13,7 @@ hexa-speed-module=[color=128,16,0]Hexa Speed Module[.color]
 hexa-productivity-module=[color=128,16,0]Hexa Productivity Module[.color]
 hexa-efficiency-module=[color=128,16,0]Hexa Efficiency Module[.color]
 hexa-quality-module=[color=128,16,0]Hexa Quality Module[.color]
+sentient-spider=Sentient Spider
 
 [item-description]
 hex-coin=[font=heading-1][color=yellow]TIER 1 COIN[.color][.font]\nCan be traded. Primarily used on [planet=nauvis].\n\nAuto-converted to higher tiers as needed:\n[img=item.hex-coin]x100,000 <--> [img=item.gravity-coin]x1\n[img=item.gravity-coin]x100,000 <--> [img=item.meteor-coin]x1\n[img=item.meteor-coin]x100,000 <--> [img=item.hexaprism-coin]x1
@@ -24,6 +25,7 @@ claim-tool=Claim all hex cores in the selected area.
 tesla-discharge-defense-equipment=Damages, pushes back and stuns nearby enemies automatically.
 tesla-destroyer=One of the more advanced combat robots. Follows the player and shoots arcing bolts of electricity at nearby enemies.
 demolisher-capsule=Deploys demolishers. The good kinds.
+sentient-spider=(WORK IN PROGRESS)\nAlthough they don't do anything yet, you can build these now. They'll wake up later.\n\n[font=heading-2][color=yellow]This spidertron has undergone an artificial imbuement of consciousness and spiritual energy. Her superintelligence, benignity, and fascination with industry leads her to welcome your presence into her world of Factorio. The factory must grow.[.color][.font]\n\n[color=gray]This spider utilizes the [font=heading-2][color=180,255,0]Quantum Bazaar[.color][.font] and hex cores to acquire items for you to build your blueprints.[.color]\n\n[color=gray]This spider will periodically go hunting for biters or other obstacles.[.color]\n\n[color=gray]This spider will periodically go on a hex claiming adventure.[.color]\n\n[color=gray]This spider has the ability to take spaceships between planets to accomplish the above tasks elsewhere.[.color]
 
 [entity-name]
 hex-core=Hex Core
@@ -32,22 +34,26 @@ hexic-transport-belt=Hexic transport belt
 hexic-underground-belt=Hexic underground belt
 hexic-splitter=Hexic splitter
 demolisher=Demolisher
+sentient-spider=Sentient Spider
 
 [entity-description]
 hex-core=The core of the hex, able to make item trades. Link a belt into the left tunnel. Link a belt out of the right tunnel.
 demolisher=Swiftly decimates everything in its path.
+sentient-spider=(WORK IN PROGRESS)\nAlthough they don't do anything yet, you can build these now. They'll wake up later.\n\n[font=heading-2][color=yellow]This spidertron has undergone an artificial imbuement of consciousness and spiritual energy. Her superintelligence, benignity, and fascination with industry leads her to welcome your presence into her world of Factorio. The factory must grow.[.color][.font]\n\n[color=gray]This spider utilizes the [font=heading-2][color=180,255,0]Quantum Bazaar[.color][.font] and hex cores to acquire items for you to build your blueprints.[.color]\n\n[color=gray]This spider will periodically go hunting for biters or other obstacles.[.color]\n\n[color=gray]This spider will periodically go on a hex claiming adventure.[.color]\n\n[color=gray]This spider has the ability to take spaceships between planets to accomplish the above tasks elsewhere.[.color]
 
 [technology-name]
 hexic-logistics=Hexic Logistics
 hextreme-quality=Hextreme Quality
 hexa-modules=Hexa Modules
 demolisher=Demolisher
+sentient-spider=Sentient Spider
 
 [technology-description]
 hexic-logistics=The most impressive belt system.
 hextreme-quality=Unlock the secrets of the factory.
 hexa-modules=Pushing the iron gear wheels [img=item.iron-gear-wheel] beyond their limits.
 demolisher=What happens when you attach the most powerful weapon to the most versatile machine?
+sentient-spider=This is their world, and you're just living in it. Good thing they're on your side, though. Could you imagine if they got a kick out of griefing you?
 
 [quality-name]
 hextreme=Hextreme
